--- a/roundTableTournamentsFrontEnd/.gitignore
+++ b/roundTableTournamentsFrontEnd/.gitignore
@@ -13,6 +13,9 @@
 # distribution files
 /dist
 
+# files from Electron build for executables
+/packages
+
 # profiling files
 chrome-profiler-events*.json
 speed-measure-plugin*.json
